--- a/Uat Space Program1.html
+++ b/Uat Space Program1.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UAT Space Program</title>
+    <script src="Code.js"></script>
 </head>
 <body>
     <!-- This is the page title. There should be only 1 <h1> tag on a webpage. -->
@@ -30,85 +31,9 @@
         //this is a single line comment
         /*this is a multiline comment */
 
-        //traks the current countdown time
-        var currTime = 50;
-
-        //tracks the current timeout
-        var timeout = 0;
-
-        //this value will not change and creates the 5 seond delay
-        var timeoutIncrement = 5000;
-        
         // this is a short hand to piont to the 
-        var countdownElem = document.getElementById("countdown")
-
-        //begin of the countdown
-        setTimeout(function(){
-            countdownElem.innerHTML = currTime;
-            currTime = currTime - 5;
-        }, timeout);
-        timeout = timeout + timeoutIncrement;
-
-        setTimeout(function(){
-            countdownElem.innerHTML = currTime;
-            currTime = currTime - 5;
-        }, timeout);
-        timeout = timeout + timeoutIncrement;
-
-        setTimeout(function(){
-            countdownElem.innerHTML = currTime;
-            currTime = currTime - 5;
-        }, timeout);
-        timeout = timeout + timeoutIncrement;
-
-        setTimeout(function(){
-            countdownElem.innerHTML = currTime;
-            currTime = currTime - 5;
-        }, timeout);
-        timeout = timeout + timeoutIncrement;
-
-        setTimeout(function(){
-            countdownElem.innerHTML = currTime;
-            currTime = currTime - 5;
-        }, timeout);
-        timeout = timeout + timeoutIncrement;
-
-        setTimeout(function(){
-            countdownElem.innerHTML = currTime;
-            currTime = currTime - 5;
-        }, timeout);
-        timeout = timeout + timeoutIncrement;
-
-        setTimeout(function(){
-            countdownElem.innerHTML = currTime;
-            currTime = currTime - 5;
-        }, timeout);
-        timeout = timeout + timeoutIncrement;
-
-        setTimeout(function(){
-            countdownElem.innerHTML = currTime;
-            currTime = currTime - 5;
-        }, timeout);
-        timeout = timeout + timeoutIncrement;
-
-        setTimeout(function(){
-            countdownElem.innerHTML = currTime;
-            currTime = currTime - 5;
-        }, timeout);
-        timeout = timeout + timeoutIncrement;
-
-        setTimeout(function(){
-            countdownElem.innerHTML = currTime;
-            currTime = currTime - 5;
-        }, timeout);
-        timeout = timeout + timeoutIncrement;
-
-        //This is last time we need to call setTimeout, currTime is now 0
-        setTimeout(function(){
-            alert("Takeoff!");
-            countdownElem.innerHTML = "Launch successful!";
-        }, timeout);
-        
+        var countdownElem = document.getElementById("countdown");
+        runTimer(countdownElem);
     </script>
 </body>
 </html>
