--- a/Uat Space Program1.html
+++ b/Uat Space Program1.html
@@ -30,6 +30,8 @@
     <p>
         Countdown: <span id="countdown"></span>
     </p>
+    <button type = "button" onclick="startButtonClick();" id= "btnStart">Start Countdown</button>
+    <button type = "button" onclick="stopButtonClick();" id="btnStop" disabled="true">Stop Countdown</button>
 
     <script>
         //this is a single line comment
@@ -37,10 +39,8 @@
 
         var userInfo = getUserInput();
         document.getElementById("userNameBadge").innerHTML = userInfo;
-
+ggggggggg
         // this is a short hand to piont to the 
-        var countdownElem = document.getElementById("countdown");
-        runTimer(countdownElem);
     </script>
 </body>
 </html>
