--- a/Uat Space Program1.html
+++ b/Uat Space Program1.html
@@ -34,13 +34,10 @@
     <button type = "button" onclick="stopButtonClick();" id="btnStop" disabled="true">Stop Countdown</button>
 
     <script>
-        //this is a single line comment
-        /*this is a multiline comment */
+        //var userInfo = getUserInput();
+        //document.getElementById("userNameBadge").innerHTML = userInfo;
 
-        var userInfo = getUserInput();
-        document.getElementById("userNameBadge").innerHTML = userInfo;
-
-        // this is a short hand to piont to the 
+        playSound("us-lab-background.mp3")
     </script>
 </body>
 </html>
